Starting to get a test version working.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,14 @@
         "-IC:\\msys64\\mingw64\\include\\GL",
         "-IC:\\msys64\\mingw64\\include",
         "${fileDirname}\\main.cpp",
+        "${fileDirname}\\TestRenderer.cpp",
+        "${fileDirname}\\SGA\\SGA_Application.cpp",
+        "${fileDirname}\\SGA\\SGA_Timer.cpp",
+        "${fileDirname}\\SGA\\SGA_Window.cpp",
+        "${fileDirname}\\SGA\\SGA_ShaderProgram.cpp",
+        "${fileDirname}\\SGA\\SGA_Shader.cpp",
+        "${fileDirname}\\SGA\\SGA_FragmentShader.cpp",
+        "${fileDirname}\\SGA\\SGA_VertexShader.cpp",
         "-o",
         "${fileDirname}\\bin\\gltest.exe",
         "-LC:/msys64/mingw64/lib",
